[gd_scene load_steps=15 format=3 uid="uid://bstnmruoashay"]

[ext_resource type="Script" path="res://chat_text1_5.gd" id="1_8vjfb"]
[ext_resource type="Texture2D" uid="uid://7ympmf8u77u0" path="res://sprites/Untitled64_20240516114802.png" id="2_nty2j"]
[ext_resource type="Texture2D" uid="uid://dh6on7rqw6k7r" path="res://sprites/Untitled77_20240510125917.png" id="9_1nki4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_msekt"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 0.533333)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n0ihw"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 0.533333)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yyii3"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 0.533333)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nneum"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 0.560784)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xl4tp"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 0.560784)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_84aok"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 0.560784)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0vqbr"]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_53huk"]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.129412, 0.698039, 1, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_401cs"]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0.8, 0.8, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dgafw"]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0.8, 0.8, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q02kw"]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0.8, 0.8, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 5

[node name="chat" type="Node2D"]
position = Vector2(1662, 279)
script = ExtResource("1_8vjfb")

[node name="bg" type="TextureRect" parent="."]
offset_left = -1984.0
offset_top = -436.0
offset_right = 1149.0
offset_bottom = 1498.0
texture = ExtResource("2_nty2j")
expand_mode = 1

[node name="aiko" type="Sprite2D" parent="bg"]
position = Vector2(966, 1739)
scale = Vector2(0.964844, 0.919759)
texture = ExtResource("9_1nki4")

[node name="InputEdit" type="TextEdit" parent="."]
custom_minimum_size = Vector2(240, 280)
offset_left = -329.0
offset_top = 666.0
offset_right = 555.0
offset_bottom = 946.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_msekt")
theme_override_styles/focus = SubResource("StyleBoxFlat_n0ihw")
theme_override_styles/read_only = SubResource("StyleBoxFlat_yyii3")
placeholder_text = "Add a question for Aiko..."
wrap_mode = 1

[node name="ResponseEdit" type="TextEdit" parent="."]
custom_minimum_size = Vector2(250, 280)
offset_left = -346.0
offset_top = -184.0
offset_right = 732.0
offset_bottom = 652.0
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_nneum")
theme_override_styles/focus = SubResource("StyleBoxFlat_xl4tp")
theme_override_styles/read_only = SubResource("StyleBoxFlat_84aok")
editable = false
wrap_mode = 1

[node name="SendButton" type="Button" parent="."]
offset_left = 600.0
offset_top = 739.0
offset_right = 729.0
offset_bottom = 870.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(0.129412, 0.698039, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.129412, 0.698039, 1, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0.8, 0.8, 1)
theme_override_colors/icon_hover_color = Color(0.129412, 0.698039, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0.8, 0.8, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_0vqbr")
theme_override_styles/hover = SubResource("StyleBoxFlat_53huk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_401cs")
theme_override_styles/disabled = SubResource("StyleBoxFlat_dgafw")
theme_override_styles/focus = SubResource("StyleBoxFlat_q02kw")
text = "âž¤"

[connection signal="pressed" from="SendButton" to="." method="_on_send_button_pressed"]
